Fixing issue with card body overflow.

--- a/css/main.css
+++ b/css/main.css
@@ -149,9 +149,18 @@ footer
 .cardBody
 {
     font-size: 0.8em;
-    overflow-y: auto;
-    color: #212121;     /* Required in case the card is surrounded by a link - otherwise the text is the link colour */
     margin: 0.1em 0 0 0;
+    color: #212121;     /* Required in case the card is surrounded by a link - otherwise the text is the link colour */
+}
+
+a.card:hover
+{
+    text-decoration: none;  /* prevents the text in the card body being underlined - we only want the text in the card head underlined on hover, see a.card:hover .cardHead */
+}
+
+a.card:hover .cardHead
+{
+    text-decoration: underline; /* Ensures the text in the card header is underlined on-hover */
 }
 
 .cardContainer
